# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/: calc.hpp  models.hpp  renderer.hpp  types.hpp  utils.hpp  window.hpp
src/: main.cpp  renderer.cpp  window.cpp
